# btate

./: .gitignore  LICENSE  PUBLISHING.md  README.md  conftest.py  pyproject.toml  requirements-colab.txt
btate/: README.md  __init__.py
btate/benchmarks/: __init__.py  ablation.py  decision.py  dtm.py  frequentist.py  harness.py  joint_calibration.py  maroulas_diagnostics.py  metrics.py  pipeline.py  synthetic.py
btate/causal/: __init__.py  fgp.py  propagation.py  tsbcf.py
btate/embeddings/: __init__.py  aggregation.py  landscape.py  reduction.py  silhouette.py  utils.py
btate/partitions/: __init__.py  diagnostics.py  lifetime_model.py
btate/topo_posterior/: __init__.py  adapters.py  eb.py  elicitation.py  sampler.py
tcda_uq/: __init__.py  utils.py
tcda_uq/datasets/: __init__.py  covariates.py  orbit.py  sarscov2.py  simulation.py
tcda_uq/estimators/: __init__.py  aipw.py  ctate_dr_learner.py  nuisance.py
tcda_uq/metrics/: __init__.py  bands.py  coverage.py  plotting.py
tcda_uq/silhouette/: __init__.py  core.py
tcda_uq/uq/: __init__.py
tcda_uq/uq/asymptotic/: __init__.py  covariance.py  ctate_bands.py  liebl_reimherr.py  multiplier_bootstrap.py  pini_vantini.py
tcda_uq/uq/conformal/: __init__.py
tests/: test_adapters.py  test_adaptive_calibration.py  test_benchmarks.py  test_causal.py  test_diagnostics.py  test_elicitation.py  test_embeddings.py  test_metrics.py  test_package.py  test_partitions.py  test_sampler.py  test_tsbcf.py
tsbcf-master/: NAMESPACE
tsbcf-master/R/: tsbart-compat.R  tsbcf.R
tsbcf-master/docs/reference/: sim.html
tsbcf-master/src/: GIGrvg.cpp  funs.h
