[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "btate"
version = "0.1.0"
description = "End-to-End Bayesian Topological Causal Inference (Bayesian TATE)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Hugo G. Souto", email = "hugo.souto@dell.com" },
    { name = "Ioannis Diamantis", email = "i.diamantis@maastrichtuniversity.nl" },
]
keywords = ["causal-inference", "topological-data-analysis", "bayesian", "persistence-diagrams"]

# Core runtime dependencies (kept minimal; heavy/optional deps are extras).
# ``bayes_tda`` (Maroulas posterior) and ``tcda_uq`` (faithful frequentist bands)
# are vendored in this repository so both work out of the box after install.
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "gudhi>=3.9",
    "joblib>=1.2",
]

[project.optional-dependencies]
# Functional regression / embeddings (TATE parity pipeline).
fda = ["scikit-fda>=0.9", "pandas>=2.0", "scikit-learn>=1.3"]
# Everything needed to run the Phase-4 benchmark notebooks on Google Colab.
colab = ["scikit-fda>=0.9", "pandas>=2.0", "scikit-learn>=1.3", "matplotlib>=3.6",
         "networkx>=3.0", "nilearn>=0.10", "tqdm>=4.66"]
# Development / testing.
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.urls]
Homepage = "https://github.com/hugogobato/btate"
Repository = "https://github.com/hugogobato/btate"

[tool.setuptools.packages.find]
include = ["btate*", "bayes_tda*", "tcda_uq*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # bayes_tda ships LaTeX docstrings with unescaped backslashes.
    "ignore::SyntaxWarning",
]
